--- a/css/storybook.scss
+++ b/css/storybook.scss
@@ -1,31 +1,16 @@
 body {
   background-color: rgba(0, 0, 0, 0.05);
-  background-image: repeating-linear-gradient(
-      0deg,
-      transparent,
-      transparent 7px,
-      rgba(0, 0, 0, 0.2) 1px,
-      transparent 8px
-    ),
-    repeating-linear-gradient(
-      90deg,
-      transparent,
-      transparent 7px,
-      rgba(0, 0, 0, 0.2) 1px,
-      transparent 8px
-    );
+  background-image: repeating-linear-gradient(0deg, transparent, transparent 7px, rgba(0, 0, 0, 0.2) 1px, transparent 8px), repeating-linear-gradient(90deg, transparent, transparent 7px, rgba(0, 0, 0, 0.2) 1px, transparent 8px);
   background-size: 8px 8px;
 }
 
 html {
   box-sizing: border-box;
-  font-family: Roboto, "sans-serif";
+  font-family: Helvetica, "sans-serif";
   font-size: 14px;
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit;
 }
 
